# slackbot

./: .gitignore  main.py  pyproject.toml
.slack/: config.json
bot/: app.py  config.py  handlers.py  llm.py  logger.py  logging.py  slack_utils.py  threads.py  tools.py
bot/tools/: __init__.py  bash.py  files.py  web.py
