[project]
name = "slackbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "slack-bolt",
    "python-dotenv",
    "slack-cli-hooks<1.0.0",
    "openai>=2.26.0",
    "httpx>=0.27.0",
    "ddgs>=9.11.2",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = ["watchfiles"]
